--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -112,7 +112,7 @@
               </a>
             </div>
             <div class="col-md-3">
-              <a href="#" onclick="openTerminal(); return false;" class="btn btn-dark w-100 d-flex align-items-center justify-content-center">
+              <a href="#" onclick="openTerminal(); return false;" class="btn btn-secondary w-100 d-flex align-items-center justify-content-center">
                 <i class="bi bi-terminal me-2"></i>
                 Terminal
               </a>
